--- a/index.html
+++ b/index.html
@@ -5,32 +5,38 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Spongebob Squarepants</title>
 	<link rel="icon" href="SpongeBob_SquarePants_character.png">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=El+Messiri&family=Gloria+Hallelujah&family=Indie+Flower&display=swap" rel="stylesheet">
+
+
+	<link rel="stylesheet" type="text/css" href="css/spongebob.css">
 </head>
 <body>
 	<!--- header element --->
 	<header>
-		<img src="SpongeBob_SquarePants_character.png">
-		<h1>Spongebob Squarepants</h1>
+		<img src="firstpicresized.jpeg">
+		<h1>SpongeBob SquarePants</h1>
 	</header>
 
 	<!-- main element -->
 	<main>
-		<h2>About Spongebob</h2>
-		<p>Who lives in a pineapple under the sea? Spongebob Squarepants! Your energetic, charismatic and over the top sea sponge is here to live his life to the fullest in the underwater city of Bikini Bottom.  </p>
+		<h2>About SpongeBob</h2>
+		<p>Who lives in a pineapple under the sea? SpongeBob SquarePants! Your energetic, charismatic and over the top sea sponge is here to live his life to the fullest in the underwater city of Bikini Bottom.  </p>
 		<img src="https://imagesvc.meredithcorp.io/v3/mm/image?q=60&c=sc&poi=face&w=2000&h=1000&url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F6%2F2017%2F05%2Fspongebob-2000.jpg">
 
 		<!-- Characterisitics -->
-		<p>Spongebob and his friends</p>
-		<h2>Spongebob Characteristics</h2>
+		<p class="caption">SpongeBob and his friends</p>
+		<h2>SpongeBob Characteristics</h2>
 		<ol>
-			<li>He works as a fry cook in the Krusty Krab</li>
-			<li>He enjoys jellyfishing</li>
+			<li>He works as a fry cook in the Krusty Krab.</li>
+			<li>He enjoys jellyfishing.</li>
 			<li>He is a bit annoying but tries to make everyone around him happy.</li>
 		</ol>
 
 		<!-- Friends -->
-		<h2>Spongebob's Friends</h2>
-		<p>Spongebob has awesome friends. His best friend is Patrick Star. Click on the links below to read more about them</p>
+		<h2>SpongeBob's Friends</h2>
+		<p>SpongeBob has awesome friends. His best friend is Patrick Star. Click on the links below to read more about them:</p>
 		<ul>
 			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Patrick_Star">Patrick Star</a></li>
 			<li><a target="_blank" href="https://en.wikipedia.org/wiki/Squidward_Tentacles">Squidward</a></li>
@@ -41,7 +47,7 @@
 	</main>
 	<!-- Footer element -->
 	<footer>
-		<p>This site was creted by APM productions. &copy; Andres Peñafiel</p>
+		<p>This site was created by APM productions. &copy; Andres Peñafiel</p>
 	</footer>
 </body>
 </body>
